panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__constexpr__test_error_constexpr_error_in_static_initialisation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: left shift of negative value in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:1:16]
   │
 1 │ static int a = -1 << 1;
   │                ───┬───  
   │                   ╰───── in this expression of type `int`
───╯

Error: shift count negative in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:2:16]
   │
 2 │ static int b = 1 << -1;
   │                ───┬───  
   │                   ╰───── in this expression of type `int`
───╯

Error: shift count negative in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:3:16]
   │
 3 │ static int c = 1 >> -1;
   │                ───┬───  
   │                   ╰───── in this expression of type `int`
───╯

Error: shift count exceeds size of shifted type in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:4:16]
   │
 4 │ static int d = 1 << 32;
   │                ───┬───  
   │                   ╰───── in this expression of type `int`
───╯

Error: signed overflow in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:5:16]
   │
 5 │ static int e = 1 << 31;
   │                ───┬───  
   │                   ╰───── in this expression of type `int`
───╯

Error: shift count exceeds size of shifted type in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:6:16]
   │
 6 │ static int f = 1 << 0x1'0000'0000;
   │                ─────────┬────────  
   │                         ╰────────── in this expression of type `int`
───╯

Error: signed overflow in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:8:16]
   │
 8 │ static int g = 1 / 0;
   │                ──┬──  
   │                  ╰──── in this expression of type `int`
───╯

Error: signed overflow in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:9:16]
   │
 9 │ static int h = (-0x7fff'ffff - 1) / -1;
   │                ───────────┬───────────  
   │                           ╰───────────── in this expression of type `int`
───╯
